Cleans the code following SonarCloud advices and reports
See https://sonarcloud.io/project/overview?id=gama-platform_gamamsi.gama.parent